tdf#143881

FORMULA: abs{x}^2 the power operator has precedence over abs.
From the discussions on bugzilla this would be the change on the UI
that whould insert {abs{<?>}} instead of abs{<?>}.

Change-Id: I93ec174365a893727097ffafebfc98ef5816c560