starmath/inc/strings.hxx
@@ -76,7 +76,7 @@
 #define RID_XNSUPSETY           "<?> nsupset <?> "
 #define RID_XNSUPSETEQY         "<?> nsupseteq <?> "
 #define RID_FUNCX               "func func(<?>) "
-#define RID_ABSX                "abs{<?>} "
+#define RID_ABSX                "{abs{<?>}} "
 #define RID_FACTX               "fact{<?>} "
 #define RID_SQRTX               "sqrt{<?>} "
 #define RID_NROOTXY             "nroot{<?>}{<?>} "
